--- a/document.html
+++ b/document.html
@@ -41,7 +41,7 @@
                     <div class="read-more__text">Читать далее</div>
                 </div>
             </div>
-            <div class="first-block__picture"><img src="_MG_3223.png"/></div>
+            <div class="first-block__picture"><img src="picture-gps.png"/></div>
         </div>
     </main>
     
