--- a/Document4/index.html
+++ b/Document4/index.html
@@ -14,28 +14,28 @@
     <div class="image-slider swiper-container">
       <div class="swiper-wrapper image-slider__wrapper">
           <div class="swiper-slide image-slider__slide">
-            <img src="cat1.png" alt="Изображение бренда">
+            <img src="assets/img/cat1.png" alt="Изображение бренда">
           </div>
           <div class="swiper-slide image-slider__slide">
-            <img src="cat1 copy.png" alt="Изображение бренда">
+            <img src="assets/img/cat1 copy.png" alt="Изображение бренда">
           </div>
           <div class="swiper-slide image-slider__slide">
-            <img src="cat1 copy 2.png" alt="Изображение бренда">
+            <img src="assets/img/cat1 copy 2.png" alt="Изображение бренда">
           </div>
           <div class="swiper-slide image-slider__slide">
-            <img src="cat1 copy 7.png" alt="Изображение бренда">
+            <img src="assets/img/cat1 copy 7.png" alt="Изображение бренда">
           </div>
           <div class="swiper-slide image-slider__slide">
-            <img src="cat1 copy 8.png" alt="Изображение бренда">
+            <img src="assets/img/cat1 copy 8.png" alt="Изображение бренда">
           </div>
           <div class="swiper-slide image-slider__slide">
-            <img src="cat1 copy 9.png" alt="Изображение бренда">
+            <img src="assets/img/cat1 copy 9.png" alt="Изображение бренда">
           </div>
           <div class="swiper-slide image-slider__slide">
-            <img src="cat1 copy 3.png" alt="Изображение бренда">
+            <img src="assets/img/cat1 copy 3.png" alt="Изображение бренда">
           </div>
           <div class="swiper-slide image-slider__slide">
-            <img src="cat1 copy 10.png" alt="Изображение бренда">
+            <img src="assets/img/cat1 copy 10.png" alt="Изображение бренда">
           </div>
       </div>
       <div class="swiper-pagination"></div>
